Update blog navigation link to point to the April 2025 post; add new APM JVM image to the post content

--- a/posts/2025-04.md
+++ b/posts/2025-04.md
@@ -47,7 +47,7 @@ cat /data/logs/marketcenter.java.all.ticket.manager.service_gc.log.0.current
 
 之后尝试在本地复现，调低堆空间大小并通过一个较大的猫眼资源图片循环执行，发现未出现无响应或宕机情况。通过 JConsole 和 JProfiler 本地观察也未见堆空间内存使用异常。
 
-![xx](/posts/2025-04/dockerfile.png)
+![dockerfile](/posts/2025-04/dockerfile.png)
 
 ``` java
 // JVM -Xms500m -Xmx500m
@@ -58,6 +58,8 @@ public static void main(String[] args) {
     }
 }
 ```
+
+![xx](/posts/2025-04/apm_jvm.png)
 
 ### 2. 正确排查方向
 
