Add README for custom Markdown syntax; implement footnote tooltips and styles in VitePress theme

--- a/posts/2025-04.md
+++ b/posts/2025-04.md
@@ -38,7 +38,7 @@ cat /data/logs/marketcenter.java.all.ticket.manager.service_gc.log.0.current
 
 > 无响应机器二次 dump 文件：https://tcstore1.17usoft.com/furt_file/furt--marketcenter-java-all-ticket-manager--10adc2f-1744196776709105619
 
-通过 [MAT](https://eclipse.dev/mat/) 对比查看，确实发现经过多次 GC 仍然有较多 ImageIO 相关对象驻留在内容中。通过分析运行日志可以发现，有较多大图片未能正常下载或上传，导致不会写入缓存从而每次任务运行均会重复拉取，怀疑和此有关。
+通过 [MAT](https://eclipse.dev/mat/) 对比查看，确实发现经过多次 GC 仍然有较多 ImageIO 相关对象驻留在内容中。通过分析运行日志可以发现，有较多大图片未能正常下载或上传，导致不会写入缓存从而每次任务运行均会重复拉取，怀疑和此有关。<sup id="fnref:1" class="footnote-ref" data-footnote="从最后的根因来看，驻留的很大原因是爬虫线程死锁导致相关线程内的资源未被释放。"><a href="#fn:1">[1]</a></sup>
 
 :::images
 ![mat_01](/posts/2025-04/mat_01.png)
@@ -73,7 +73,7 @@ public static void main(String[] args) {
 
 > Tomcat 默认工作线程数（maxThreads）是 200 个 [Apache Tomcat 8 Configuration Reference](https://tomcat.apache.org/tomcat-8.5-doc/config/http.html)
 
-::: details furt--marketcenter-java-all-ticket-manager--10adc2f---96zfcb
+::: details thread dashboard（此文件筛选了仅 WAITING 状态的线程）
 ```
 Threads Total: 496, NEW: 0, RUNNABLE: 39, BLOCKED: 0, WAITING: 408, TIMED_WAITING: 49, TERMINATED: 0                                                                                
 ID      NAME                                         GROUP                 PRIORITY       STATE          %CPU           DELTA_TIME     TIME           INTERRUPTED    DAEMON         
@@ -548,3 +548,12 @@ ID      NAME                                         GROUP                 PRIOR
 ## 四、优化手段
 
 - 生产环境屏蔽控制台的日志输出
+
+
+<div class="footnotes">
+<ol>
+<li id="fn:1">
+从最后的根因来看，驻留的很大原因是爬虫线程死锁导致相关线程内的资源未被释放。<a href="#fnref:1" class="footnote-backref">↩</a>
+</li>
+</ol>
+</div>
