Implement navigation grid component in VitePress theme; enhance navigation link handling and styles for team member cards

--- a/posts/2025-04.md
+++ b/posts/2025-04.md
@@ -3,10 +3,10 @@
 ## 一、问题现象
 
 :::images
-![web_01](/posts/2025-04/web_01.png)
-![web_02](/posts/2025-04/web_02.png)
-![web_03](/posts/2025-04/web_03.png)
-![web_04](/posts/2025-04/web_04.png)
+![web_01](/public/posts/2025-04/web_01.png)
+![web_02](/public/posts/2025-04/web_02.png)
+![web_03](/public/posts/2025-04/web_03.png)
+![web_04](/public/posts/2025-04/web_04.png)
 :::
 
 :::timeline
@@ -41,13 +41,13 @@ cat /data/logs/marketcenter.java.all.ticket.manager.service_gc.log.0.current
 通过 [MAT](https://eclipse.dev/mat/) 对比查看，确实发现经过多次 GC 仍然有较多 ImageIO 相关对象驻留在内容中。通过分析运行日志可以发现，有较多大图片未能正常下载或上传，导致不会写入缓存从而每次任务运行均会重复拉取，怀疑和此有关。<sup id="fnref:1" class="footnote-ref" data-footnote="从最后的根因来看，驻留的很大原因是爬虫线程死锁导致相关线程内的资源未被释放。"><a href="#fn:1">[1]</a></sup>
 
 :::images
-![mat_01](/posts/2025-04/mat_01.png)
-![mat_code_01](/posts/2025-04/mat_code_01.png)
+![mat_01](/public/posts/2025-04/mat_01.png)
+![mat_code_01](/public/posts/2025-04/mat_code_01.png)
 :::
 
 之后尝试在本地复现，调低堆空间大小并通过一个较大的猫眼资源图片循环执行，发现未出现无响应或宕机情况。通过 JConsole 和 JProfiler 本地观察也未见堆空间内存使用异常。
 
-![dockerfile](/posts/2025-04/dockerfile.png)
+![dockerfile](/public/posts/2025-04/dockerfile.png)
 
 ``` java
 // JVM -Xms500m -Xmx500m
@@ -59,13 +59,13 @@ public static void main(String[] args) {
 }
 ```
 
-![xx](/posts/2025-04/apm_jvm.png)
+![xx](/public/posts/2025-04/apm_jvm.png)
 
 ### 2. 正确排查方向
 
 此时又回过头看 APM JVM 监控，看到问题时段（18:10 ）老年代就再也没有增长过了，且 Old GC 也没有触发过了。并且看线程状态情况，发现总线程数大量增长且大量线程停留在 Waiting 状态上。此时发现排查方向不对，不是堆空间内存使用问题，而是线程问题。
 
-![apm_dashboards](/posts/2025-04/apm_dashboards.png)
+![apm_dashboards](/public/posts/2025-04/apm_dashboards.png)
 
 通过 `curl -v xx.xxx.98.69:8868/allticketconfig/monitor.jsp` 查看此时应用是否还能正确接受请求，发现还是无响应，确定应用长时间仍然未恢复。
 
@@ -491,9 +491,9 @@ ID      NAME                                         GROUP                 PRIOR
 通过随机挑选了几个线程打印此时运行堆栈信息发现他们都在等待 `product-sync-source-data-service2` 这个线程释放锁。
 
 :::images
-![thread_1](/posts/2025-04/thread_1.png)
-![thread_2](/posts/2025-04/thread_2.png)
-![thread_3](/posts/2025-04/thread_3.png)
+![thread_1](/public/posts/2025-04/thread_1.png)
+![thread_2](/public/posts/2025-04/thread_2.png)
+![thread_3](/public/posts/2025-04/thread_3.png)
 :::
 
 然后查看 `product-sync-source-data-service2` 这个线程发现他一直阻塞在打印日志这一步，对应 JAVA 代码如上图右一。
@@ -539,9 +539,9 @@ ID      NAME                                         GROUP                 PRIOR
 3. 由于开启了日志控制台输出，所以最终走到了 `System.out.write` 输出到了容器的控制台中
 
 :::images
-![code_1](/posts/2025-04/code_1.png)
-![code_2](/posts/2025-04/code_2.png)
-![code_3](/posts/2025-04/code_3.png)
+![code_1](/public/posts/2025-04/code_1.png)
+![code_2](/public/posts/2025-04/code_2.png)
+![code_3](/public/posts/2025-04/code_3.png)
 :::
 
 
