--- a/src/content/posts/2025-04.md
+++ b/src/content/posts/2025-04.md
@@ -24,7 +24,7 @@
 
 ### 1. 错误排查方向
 
-一开始怀疑内存泄漏，查看机器上的 GC 日志，没看到有 GC 日志文件，现在看是找错路径了，常规都会写入到  /data/logs/skynet-marketcenter.java.all.ticket.manager.service/* 这个应用对应的日志目录下，但现在看 JVM 参数是直接写入到了 /data/logs/* 的目录下。
+一开始怀疑内存泄漏，查看机器上的 GC 日志，没看到有 GC 日志文件，现在看是找错路径了，常规都会写入到  /data/logs/${app_uk}/* 这个应用对应的日志目录下，但现在看 JVM 参数是直接写入到了 /data/logs/* 的目录下。
 
 ![dockerfile](/public/posts/2025-04/dockerfile.png)
 
