feat: enhance resource path adjustment logic in index.html for better handling of dynamic content, improve CSS styles in Details.vue for better text wrapping, and update Markdown details in posts for clarity

--- a/src/content/posts/2025-09.md
+++ b/src/content/posts/2025-09.md
@@ -321,19 +321,20 @@ public static void main(String[] args) {
 ```
 :::
 
-::: FastJSON 1.x 与 2.x 对于内部类兼容处理不一致
+::: details FastJSON 1.x 与 2.x 对于内部类兼容处理不一致
 
 com.alibaba.fastjson.JSONException: create instance error, class com.ly.mc.ticket.model.vo.order.UserTicketOrderAuxiliary$TradeOrderResponseVO
 
 ![code_diff_fastjson_01](/public/posts/2025-09/code_diff_fastjson_01.png)
 :::
 
-::: Apache HttpClient 5.x 默认中文不编码会导致按 UTF-8 接收乱码
+::: details Apache HttpClient 5.x 默认中文不编码会导致按 UTF-8 接收乱码
+
 详见  部门公共包（产品增长研发小组定制版）中 MarketCenter Common 的 3.0.9
 ![code_diff_httpclient_01](/public/posts/2025-09/code_diff_httpclient_01.png)
 :::
 
-::: 部署构建一直卡着不动
+::: details 部署构建一直卡着不动
 - 安装和更新必要软件时一直下载不下来（后续有时间了把这个步骤预先打在镜像里）
 - 阿里云的源有时候抽风，可以尝试换成清华的源
 
@@ -357,10 +358,11 @@ RUN sed -i 's/archive.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/source
 ```
 :::
 
-::: Name for argument of type [java.lang.String] not specified, and parameter name information not available via reflection. Ensure that the compiler uses the '-parameters' flag.
+::: details Name for argument of type [java.lang.String] not specified, and parameter name information not available via reflection. Ensure that the compiler uses the '-parameters' flag.
 
-[Spring Framework 6.1 Release Notes · spring-projects/spring-framework Wiki](https://github.com/spring-projects/spring-framework/wiki/Spring-Framework-6.1-Release-Notes#parameter-name-retention)
+Spring 框架 6.1 版本开始不再尝试通过解析字节码来推断参数名称，详见：[Spring Framework 6.1 Release Notes · spring-projects/spring-framework Wiki](https://github.com/spring-projects/spring-framework/wiki/Spring-Framework-6.1-Release-Notes#parameter-name-retention)
 
+**请求报文**
 ``` http
 POST http://localhost:8149/greatorder/api/test/refund
 Content-Type: application/x-www-form-urlencoded
@@ -368,6 +370,7 @@ Content-Type: application/x-www-form-urlencoded
 projectSerialId=111_074b3c73d6764c3babd158d0d018944e&payTradeNo=DWU691A8F199P9JEVW53Y&notifyUrl=%22https%3A%2F%2Fwx.17u.cn%2Fallticket%2Fapi%2Fordernotify%22&memberId=3481195877&amt=9.9&projectCode=1520200320xsjlk&signKey=DA10F43CE0C15C3CA8C058D02B7BE9FC&doCashierGateWayUrl=&pushFinanceType=0
 ```
 
+**优化前**
 ``` java
 @RequestMapping("/refund")
 public BaseResponse<Void> refund(String projectSerialId,
@@ -376,6 +379,7 @@ public BaseResponse<Void> refund(String projectSerialId,
 }
 ```
 
+**优化后**
 ``` java
 @RequestMapping("/refund")
 public BaseResponse<Void> refund(@RequestParam("projectSerialId") String projectSerialId,
