feat: add custom build scripts for GitHub Pages and dynamic base path handling in Vite config, implement asset path correction for post-build processing, and include new images in posts for enhanced content presentation

--- a/src/content/posts/2025-09.md
+++ b/src/content/posts/2025-09.md
@@ -330,7 +330,7 @@ com.alibaba.fastjson.JSONException: create instance error, class com.ly.mc.ticke
 
 ::: details Apache HttpClient 5.x 默认中文不编码会导致按 UTF-8 接收乱码
 
-详见  部门公共包（产品增长研发小组定制版）中 MarketCenter Common 的 3.0.9
+不能直接拼接好字符串的 URL，而需要通过 URIBuilder 的方式构建 URI，如下图：
 ![code_diff_httpclient_01](/public/posts/2025-09/code_diff_httpclient_01.png)
 :::
 
@@ -360,7 +360,7 @@ RUN sed -i 's/archive.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/source
 
 ::: details Name for argument of type [java.lang.String] not specified, and parameter name information not available via reflection. Ensure that the compiler uses the '-parameters' flag.
 
-Spring 框架 6.1 版本开始不再尝试通过解析字节码来推断参数名称，详见：[Spring Framework 6.1 Release Notes · spring-projects/spring-framework Wiki](https://github.com/spring-projects/spring-framework/wiki/Spring-Framework-6.1-Release-Notes#parameter-name-retention)
+Spring 框架 6.1 版本开始不再尝试通过解析字节码来推断参数名称，需要手动增加注解并标注名称，详见：[Spring Framework 6.1 Release Notes · spring-projects/spring-framework Wiki](https://github.com/spring-projects/spring-framework/wiki/Spring-Framework-6.1-Release-Notes#parameter-name-retention)
 
 **请求报文**
 ``` http
