feat: add new IDE configuration images and update Markdown content for enhanced setup guidance

--- a/src/content/posts/2025-09.md
+++ b/src/content/posts/2025-09.md
@@ -9,8 +9,8 @@ cover: null
 
 # 2025-09 JDK 1.8 升级至 21 踩坑记录
 
-    - JDK 21 默认 GC 为 G1
-    - -XX:+UseZGC 使用 ZGC，但默认是不分代的，通过 -XX:+ZGenerational 开启分代模式
+- JDK 21 默认 GC 为 G1
+- -XX:+UseZGC 使用 ZGC，但默认是不分代的，通过 -XX:+ZGenerational 开启分代模式
 
 ## 零、前期准备
 
@@ -227,6 +227,30 @@ SLF4J(W): See https://www.slf4j.org/codes.html#ignoredBindings for an explanatio
 
 ## 一、IDE 设置
 
+### IDEA 设置
+
+:::images
+![ide_01](/public/posts/2025-09/ide_01.png)
+![ide_02](/public/posts/2025-09/ide_02.png)
+![ide_03](/public/posts/2025-09/ide_03.png)
+![ide_04](/public/posts/2025-09/ide_04.png)
+:::
+
+### java: 找不到符号
+1. 确认 IDEA 版本是否过低，不完全支持 JDK 21：https://www.jetbrains.com/zh-cn/idea/whatsnew/2023-3/
+2. 清除 IDE 缓存和历史编译产物
+
+:::images
+![ide_05](/public/posts/2025-09/ide_05.png)
+![ide_06](/public/posts/2025-09/ide_06.png)
+:::
+
+``` bash
+maven clean
+maven package
+```
+3. 然后再用 IDEA **运行** / **调试**
+
 ## 二、代码改造
 
 ### JDK 版本升级相关
@@ -378,6 +402,26 @@ JSONObject.toJSONString(object);
 
 ## 三、部署配置
 
+``` dockerfile
+ENV JAVA_OPTS="-Duser.timezone=GMT+08 -Xms2867m -Xmx2867m -XX:MaxMetaspaceSize=256m -XX:+PrintCommandLineFlags -XX:+UseContainerSupport -XX:+UseZGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/data/logs/skynet-${appUK}/jvm/java_pid%p.hprof -Xlog:gc*,gc+age*,gc+heap*:file=/data/logs/skynet-${appUK}/jvm/gc.log:time,uptime,level,tags,tid:filecount=10,filesize=100M"
+
+# 分代 ZGC
+# -XX:+ZGenerational
+# JDK 21 & ZGC 下可先不设置元空间大小让 JVM 自适应
+```
+
+| **JVM参数**          | **说明**                | **1C 2G** | **2C 4G** | **4C 8G** | **8C 16G** |
+| -------------------- | ----------------------- | --------- | --------- | --------- | ---------- |
+| -Xms                 | 初始堆内存大小           | 1434 MB   | 2867 MB   | 5734 MB   | 11468 MB   |
+| -Xmx                 | 最大堆内存大小           | 1434 MB   | 2867 MB   | 5734 MB   | 11468 MB   |
+| -XX:MetaspaceSize    | 初始元空间大小           | 128 MB    | 256 MB    | 512 MB    | 512 MB     |
+| -XX:MaxMetaspaceSize | 最大元空间大小           | 128 MB    | 256 MB    | 512 MB    | 512 MB     |
+| -Xss                 | 每个线程可使用的内存大小  |           |           |           |            |
+
+JVM 使用内存 ≈ Xmx + MaxMetaspaceSize + 线程数 x Xss
+- https://docs.oracle.com/javase/9/tools/java.htm#JSWOR-GUID-BE93ABDC-999C-4CB5-A88B-1994AAAC74D5
+- https://docs.oracle.com/en/java/javase/21/docs/specs/man/java.html#enable-logging-with-the-jvm-unified-logging-framework
+
 ## 四、线上问题
 
 ::: details NoResourceFoundException
@@ -435,7 +479,7 @@ public void setMatchOptionalTrailingSeparator(boolean matchOptionalTrailingSepar
 
 - LocalDateTime **FastJSON 1.x** 为 2025-10-20T17:15:35.065 **FastJSON 2.x** 为 2025-10-20 17:15:35.065。而 Spring MVC @RequesBody 默认按照 2025-10-20T17:15:35.065 规则接收
 - [fastjson_1_upgrade_cn · alibaba/fastjson2 Wiki](https://github.com/alibaba/fastjson2/wiki/fastjson_1_upgrade_cn#37-serializerfeaturewritedateusedateformat%E5%9C%A8fastjson2%E7%9A%84%E6%9B%BF%E4%BB%A3%E6%96%B9%E6%A1%88)
-- [https://github.com/alibaba/fastjson2/issues/3650](https://github.com/alibaba/fastjson2/issues/3650)
+- https://github.com/alibaba/fastjson2/issues/3650
 
 ``` java
 @Data
