feat: add new images for 2025-12 post and update content to reflect issues with OkHttpClient usage; enhance Markdown for better clarity and structure

--- a/src/content/posts/2025-04.md
+++ b/src/content/posts/2025-04.md
@@ -10,6 +10,8 @@ cover: null
 
 # 2025-04 应用内单台服务器无响应问题排查
 
+> 一起因为不规范的日志写入将日志写入到了控制台，而后触发 Docker 容器控制台日志过多到 hangs，进而引发应用死锁的线上问题回顾。
+
 ## 一、问题现象
 
 :::images
