feat: add logback-spring.xml image and update 2025-12 post with performance insights and compression details

--- a/src/content/posts/2025-12.md
+++ b/src/content/posts/2025-12.md
@@ -54,7 +54,7 @@ ENTRYPOINT ["java", \
 
     在不变更机器配置（2C4G）的情况下，通过切换 JDK 21 -> 1.8，GC ZGC -> G1 -> CMS 发现效果均不好
 
-**2025-12-25** 通过应用监控大盘发现大量守护线程，排查代码初步怀疑 OkHttpClient 使用不规范导致。
+**2025-12-25** 通过应用大盘监控发现大量守护线程，排查代码初步怀疑 OkHttpClient 使用不规范导致。
 
 ::: details 最小化代码
 ``` java
@@ -140,7 +140,33 @@ ENTRYPOINT ["java", \
 
 ### 2. client & server 传输的报文过大
 
+G-ZIP 压缩后 21.46 KB；压缩前: 315.72 KB
+
+- server 可通过 spring 配置开启压缩能力
+
+    ``` ini
+    server.compression.enabled=true
+    server.compression.min-response-size=2KB
+    ```
+    
+- client OkHttp 默认支持，不过也需要下游服务支持
+
+### 3. 高并发同步写入日志
+
+通过 arthas trace 不断向下追踪耗时方法时发现高并发下日志写入较慢，故需要修改成异步
+
+``` bash
+# https://arthas.aliyun.com/doc/install-detail.html
+curl -O https://arthas.aliyun.com/arthas-boot.jar
+java -jar arthas-boot.jar
+# https://arthas.aliyun.com/doc/trace.html
+trace trace demo.MathGame run '#cost > 1000'
+```
+
+![logback-spring.xml](/public/posts/2025-12/logback-spring.xml.png)
+
 ## 四、优化手段
 
 - 以单例的形式使用 OkHttpClient（历史代码直接使用了底层 client，后续已切换至公共包）
 - 该项目早前已升级至 JDK 21 故可开启`虚拟线程`优化高并发 IO 密集场景下的资源占用（减少平台线程进而减少内容占用和线程切换时的资源占用）
+- 后续引入秒级的本地缓存替换部分 Redis、HTTP 访问
