fix: correct inventory management post content for July 2025 by refining Redis caching explanation and ensuring clarity in data synchronization process

--- a/src/content/posts/2025-07.md
+++ b/src/content/posts/2025-07.md
@@ -59,6 +59,6 @@ decr key -- 100 -> 99
 具体措施可以是将用户请求在做初步检验后扔进队列中，然后提示用户排队中。消费时做批量的库存扣减和写入。处理完成后通知前端，前端通过轮询方式获取排队情况。
 
 ## 队列
-将库存数值转化成具体的一行行数据，一万个库存就是一万行记录，然后利用 Redis （对于 Redis 的可用性可以通过多中心部署的方式解决）甚至是本地缓存（将库存平分，提前将所有库存编号进行同步（先写 DB 然后写缓存，若缓存全部写成功再同步到 DB）
+将库存数值转化成具体的一行行数据，一万个库存就是一万行记录，然后利用 Redis （对于 Redis 的可用性可以通过多中心部署的方式解决）甚至是本地缓存（将库存平分，提前将所有库存编号进行同步。先写 DB 然后写缓存，若缓存全部写成功再提交 DB）
 
 请求进来后优先通过缓存消费到库存编号，然后根据编号去 MySQL 中通过 CAS 更新使用状态保证并发安全与持久化。
